[package]
name = "taco"
version = "0.1.4"
edition = "2021"
description = "Tool to automatically download and decrypt 64 bits iOS firmware images."
repository = "https://github.com/matteyeux/taco"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0.8", features = ["derive"] }
partialzip = "1.1.2"
regex = "1.6.0"
scraper = "0.13.0"
select = "0.5.0"
stybulate = "1.1.2"
